force-app/main/default/objects/Survey_Choice__c/Survey_Choice__c.object-meta.xml
<CustomObject>
    <label>Survey Choice</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Choice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>