force-app/main/default/objects/Survey_Choice__c/fields/CS_Survey_Choice_Key__c.field-meta.xml
<CustomField>
    <fullName>CS_Survey_Choice_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Survey Choice Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>