force-app/main/default/objects/Survey_Choice__c/fields/Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Choice (Dependent Question)</relationshipLabel>
    <relationshipName>Dependent_Question</relationshipName>
    <type>Lookup</type>
</CustomField>