force-app/main/default/objects/Survey_Choice__c/fields/Dependent_Question_Render_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Question_Render_Type__c</fullName>
    <label>Dependent Question Render Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next to Choice</fullName>
            </value>
            <value>
                <fullName>Below to Choice</fullName>
            </value>
            <value>
                <fullName>After All Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>