force-app/main/default/objects/Survey_Choice__c/fields/Dependent_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Type__c</fullName>
    <label>Dependent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Require One</fullName>
            </value>
            <value>
                <fullName>Not Require</fullName>
            </value>
            <value>
                <fullName>Require One or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>