force-app/main/default/objects/Survey_Choice__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>