force-app/main/default/objects/Survey_Choice__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <label>Option Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Checkbox and Input</fullName>
            </value>
            <value>
                <fullName>Input Text</fullName>
            </value>
            <value>
                <fullName>Percentage input</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>List Box</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
                <isActive>false</isActive>
                <label>Space</label>
            </value>
            <value>
                <fullName>Text</fullName>
                <isActive>false</isActive>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>