force-app/main/default/objects/Survey_Choice__c/fields/Ordering__c.field-meta.xml
<CustomField>
    <fullName>Ordering__c</fullName>
    <label>Ordering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>