force-app/main/default/objects/Survey_Choice__c/fields/Require_Type__c.field-meta.xml
<CustomField>
    <fullName>Require_Type__c</fullName>
    <label>Require Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required only when check</fullName>
            </value>
            <value>
                <fullName>Not allow -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>