force-app/main/default/objects/Survey_Choice__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>